--- a/ddp-workspace/projects/ddp-pancan/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-pancan/src/assets/i18n/en.json
@@ -404,6 +404,9 @@
                     "CCCanada": "Colorectal Cancer Canada"
                 },
                 "Text": "For more information on how to become a partner for the Colorectal Cancer Project, contact the team at <a class='Link' href='mailto:info@colorectalcancerproject.org'>info@colorectalcancerproject.org</a>."
+            },
+            "Footer": {
+                "Text": "The Colorectal Cancer Project is part of <span class='bold'>Count Me In</span>, a research initiative that brings together patients and scientists as partners to speed up discoveries in cancer research."
             }
         },
         "Header": {
@@ -423,7 +426,9 @@
         "Footer": {
             "BackToTopButton": "Back to top",
             "Contacts": "Contact Us",
-            "Copyright": "Copyright © 2021 Count Me In. All rights reserved."
+            "Copyright": "Copyright © 2021 Count Me In. All rights reserved.",
+            "Email": "Email",
+            "Phone": "Phone"
         }
     },
     "Toolkit": {
