--- a/ddp-workspace/projects/ddp-pancan/src/assets/i18n/es.json
+++ b/ddp-workspace/projects/ddp-pancan/src/assets/i18n/es.json
@@ -404,6 +404,9 @@
                     "CCCanada": "[ES]Colorectal Cancer Canada"
                 },
                 "Text": "[ES]For more information on how to become a partner for the Colorectal Cancer Project, contact the team at <a class='Link' href='mailto:info@colorectalcancerproject.org'>info@colorectalcancerproject.org</a>."
+            },
+            "Footer": {
+                "Text": "[ES]The Colorectal Cancer Project is part of <span class='bold'>Count Me In</span>, a research initiative that brings together patients and scientists as partners to speed up discoveries in cancer research."
             }
         },
         "Header": {
@@ -423,7 +426,9 @@
         "Footer": {
             "BackToTopButton": "Volver Arriba",
             "Contacts": "Contáctenos",
-            "Copyright": "Copyright © 2021 Count Me In. Todos los derechos reservados."
+            "Copyright": "Copyright © 2021 Count Me In. Todos los derechos reservados.",
+            "Email": "Correo electrónico",
+            "Phone": "Teléfono"
         }
     },
     "Toolkit": {
