Ddp 6472 participants dashboard (#719)
* DDP-6472 add dashboard button to pancan, adjust styles

* DDP-6472 participants dashboard main changes

* DDP-5926 add operator to the list of participants

* DDP-6472 add default titles for user and children panel

* DDP-6472 fix unit tests, improve performance

* DDP-6472 use activities input as data in userActivities component

* DDP-6472 set participant at operator activities call only for useParticipantDashboard config

* DDP-6472 unit tests + some comments

* DDP-6472 don't display "Created" column

* DDP-6472 styling

* DDP-6472 dashboard styling

* DDP-6472 add small spanish translation

* DDP-6472 clean up

* DDP-6472 pass activities to userActivities component via input + comments, some renaming

Co-authored-by: Anastasiia_Glushkova <anastasiia.glushkova@clarivate.com>

--- a/ddp-workspace/projects/ddp-pancan/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-pancan/src/assets/i18n/en.json
@@ -379,7 +379,13 @@
             "ReturnButton": "RETURN HOME"
         },
         "Dashboard": {
-            "Title": "Dashboard"
+            "Title": "Dashboard",
+            "ParticipantsTitle": "Participant Dashboard",
+            "AddParticipant": "Add Participant",
+            "ShowPanel": "Show",
+            "HidePanel": "Hide",
+            "UserLabel": "You",
+            "ChildLabel": "Your child"
         },
         "Password": {
             "Title": "Please enter the password",
@@ -467,10 +473,10 @@
         "CloseButton": "CLOSE",
         "AddButton": "ADD",
         "CancelButton": "CANCEL",
-        "NextButton": "NEXT",
+        "NextButton": "Next",
         "PreviousButton": "PREV",
         "SavingButton": "SAVING",
-        "EditButton": "EDIT",
+        "EditButton": "Edit",
         "CompleteButton": "Edit",
         "ReviewButton": "VIEW",
         "OpenButton": "Open",
