Add temporary spanish translation

--- a/ddp-workspace/projects/ddp-pancan/src/assets/i18n/es.json
+++ b/ddp-workspace/projects/ddp-pancan/src/assets/i18n/es.json
@@ -61,7 +61,7 @@
                     },
                     {
                         "Title": "PASO 4",
-                        "Time": " ",
+                        "Time": "[ES]Ongoing",
                         "Description": "Aprenda junto con nosotros",
                         "ImageAlt": "Burbujas de diálogo que comparten corazones y visualizaciones de datos"
                     }
