DDP-6655: Fix compensation question answer

--- a/ddp-workspace/projects/ddp-circadia/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-circadia/src/assets/i18n/en.json
@@ -66,7 +66,7 @@
         },
         {
           "Title": "How will I be compensated?",
-          "Answer": "<p class=\"faq-paragraph\">Upon completion of the study, you will be compensated up to $200, should you choose to complete the optional blood draw, or $185 without the optional blood draw. We will reimburse participants that choose to provide the optional blood draw for local travel or public transportation, and parking.</p>"
+          "Answer": "<p class=\"faq-paragraph\">Upon completion of the study, you will be compensated up to $270.</p>"
         },
         {
           "Title": "Do I have to be medically diagnosed with an atypical circadian rhythm?",
