--- a/ddp-workspace/projects/ddp-pancan/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-pancan/src/assets/i18n/en.json
@@ -469,16 +469,16 @@
         }
     },
     "SDK": {
-        "SubmitButton": "SUBMIT",
-        "CloseButton": "CLOSE",
+        "SubmitButton": "Submit",
+        "CloseButton": "Close",
         "AddButton": "ADD",
         "CancelButton": "CANCEL",
         "NextButton": "Next",
-        "PreviousButton": "PREV",
-        "SavingButton": "SAVING",
+        "PreviousButton": "Prev",
+        "SavingButton": "Saving",
         "EditButton": "Edit",
         "CompleteButton": "Edit",
-        "ReviewButton": "VIEW",
+        "ReviewButton": "View",
         "OpenButton": "Open",
         "StartButton": "Start",
         "AgreeButton": "I agree",
