Add real logos for partners

--- a/ddp-workspace/projects/ddp-pancan/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-pancan/src/assets/i18n/en.json
@@ -397,11 +397,10 @@
             "Partners": {
                 "Title": "Partners",
                 "Alts": {
+                    "CCCanada": "Colorectal Cancer Canada",
                     "CCResource": "Colorectal Cancer Resource & Action Network",
                     "GICAlliance": "GI Cancers Alliance",
-                    "FightCC": "Fight Colorectal Cancer",
-                    "Raymond": "Raymond Foundation",
-                    "CCCanada": "Colorectal Cancer Canada"
+                    "Raymond": "Raymond Foundation"
                 },
                 "Text": "For more information on how to become a partner for the Colorectal Cancer Project, contact the team at <a class='Link' href='mailto:info@colorectalcancerproject.org'>info@colorectalcancerproject.org</a>."
             },
