--- a/ddp-workspace/projects/ddp-pancan/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-pancan/src/assets/i18n/en.json
@@ -195,45 +195,35 @@
                     "Paragraphs": [
                         "Count Me In (CMI) began with discussions between Emerson Collective and the Broad Institute of MIT and Harvard in 2013. Since the launch of the first project in metastatic breast cancer in late 2015, thousands of individuals living with cancer from around the United States and Canada have said “Count Me In” to partnering with researchers and sharing their experiences. The Metastatic Breast Cancer (MBC) project was the first iteration of this new vision, followed by the Angiosarcoma (ASC) Project in 2017, and the Metastatic Prostate Cancer (MPC) Project in 2018. Since then, CMI has also launched the Esophageal and Stomach Cancer Project, the Osteosarcoma (OS) Project, and the Brain Tumor (BT) Project. In Fall 2021, enrollment in Count Me In became available to any patient in the United States or Canada who has ever been diagnosed with cancer.",
                         "Count Me In is stewarded by the <a href=\"#\">Emerson Collective</a>, a California-based social change organization; the <a href=\"#\">Broad Institute</a>, a leading nonprofit biomedical research institution; and the <a href=\"#\">Dana Farber Cancer Institute</a>, a leading cancer hospital."
-                    ],
-                    "ImageAlt": "Projects milestones"
+                    ]
                 },
                 {
                     "Title": "People",
                     "PeopleList": [
-                        "<b>Elana Anastasio</b><br/>Leadership",
-                        "<b>Roeshana Moore-Evans</b><br/>Leadership",
-                        "<b>Corrie Painter</b><br/>Leadership",
-                        "<b>Nikhil Wagle</b><br/>Leadership",
-                        "<b>Kim Hurley</b><br/>Finances and Grants",
-                        "<b>Ashley Matthews</b><br/>Finances and Grants",
-                        "<b>Brett Tomson</b><br/>Scientific Alliances and Outreach",
-                        "<b>Colleen Nguyen</b><br/>Community Engagement",
-                        "<b>Christina Arecy</b><br/>Community Engagement",
-                        "<b>Tania Hernandez</b><br/>Community Engagement",
-                        "<b>Oyin Alao</b><br/>Project Management and Coordination",
-                        "<b>Imani Boykin</b><br/>Project Management and Coordination",
-                        "<b>Maria Cerio</b><br/>Project Management and Coordination",
-                        "<b>Parker Chastain</b><br/>Project Management and Coordination",
-                        "<b>Taylor Cusher</b><br/>Project Management and Coordination",
-                        "<b>Jordan Doucette</b><br/>Project Management and Coordination",
-                        "<b>Ayanah Dowdye</b><br/>Project Management and Coordination",
-                        "<b>Mary McGillicuddy</b><br/>Project Management and Coordination",
-                        "<b>Rafael Ramos</b><br/>Project Management and Coordination",
-                        "<b>Sarah Winnicki</b><br/>Project Management and Coordination",
-                        "<b>Ben Zola</b><br/>Project Management and Coordination",
-                        "<b>Shahrayz Shah</b><br/>Clinical Abstraction",
-                        "<b>Ilan Small</b><br/>Clinical Abstraction",
-                        "<b>Delia Sosa</b><br/>Clinical Abstraction",
-                        "<b>Lauren Sterlin</b><br/>Clinical Abstraction",
-                        "<b>Beena Thomas</b><br/>Clinical Abstraction",
-                        "<b>Daniel Abravanel</b><br/>Medical Oncology",
-                        "<b>Sara Balch</b><br/>Computational Team",
-                        "<b>Jorge Gomez Tejeda Zanudo</b><br/>Computational Team",
-                        "<b>Esha Jain</b><br/>Computational Team",
-                        "<b>Dewey Kim</b><br/>Computational Team"
-                    ],
-                    "ImageAlt": "A person"
+                        {
+                            "Title": "Leadership",
+                            "List": [
+                                "<b>Elana Anastasio</b><br/>Associate Director",
+                                "<b>Roeshana Moore-Evans</b><br/>Senior Advisor",
+                                "<b>Corrie Painter</b><br/>Deputy Director",
+                                "<b>Nikhil Wagle</b><br/>Director"
+                            ]
+                        },
+                        {
+                            "Title": "Board of Directors",
+                            "List": [
+                                "<b>Todd Golub</b>, Co-chair<br/>Director, Broad Institute<br>Professor of Pediatrics, Harvard Medical School Charles A. Dana Investigator, Dana-Farber Cancer Institute",
+                                "<b>Reed Jobs</b>, Co-chair<br/>Managing Director, Health, Emerson Collective",
+                                "<b>Andrew Forrest</b><br/>Founder and Chairman - Fortescue Metals Group, Fortescue Future Industries, Tattarang Group, and Minderoo Foundation",
+                                "<b>Cindy Citrone</b><br/>Founder and CEO, Citrone 33",
+                                "<b>Greg Simon</b><br/>President, Simonovation, LLCFormer Executive Director White House Cancer Moonshot Task Force",
+                                "<b>Jesse Souweine</b><br/>Chief Operating Officer, Executive Vice President, Broad Institute"                                ,
+                                "<b>Laurie Glimcher</b><br/>President and CEO, Dana-Farber Cancer Institute Director, Dana-Farber/Harvard Cancer Center Richard and Susan Smith Professor of Medicine, Harvard Medical School",
+                                "<b>Matt Bettonville</b><br/>Director, Venture Investing, Health, Emerson Collective",
+                                "<b>Nikhil Wagle</b><br/>Director"
+                            ]
+                        }
+                    ]
                 }
             ]
         },
