--- a/ddp-workspace/projects/ddp-pancan/src/assets/i18n/es.json
+++ b/ddp-workspace/projects/ddp-pancan/src/assets/i18n/es.json
@@ -23,20 +23,21 @@
     "App": {
         "HomePage": {
             "JoinCountMeInButton": "Únase a Count Me In",
-            "IntroductionSection": {
-                "Title": "Actuemos juntos para dejar huella en el futuro de la investigación del cáncer.",
-                "Text": "Count Me In es una iniciativa de investigación sin fines de lucro que involucra a los pacientes y les permite hacer avances en la investigación del cáncer al compartir sus muestras, su información clínica y sus puntos de vista."
-            },
             "LearnMoreSection": {
-                "Title": "La experiencia de cada paciente con cáncer debe tenerse en cuenta.",
-                "Text": "Las historias clínicas, las muestras de tumores y las experiencias personales de los pacientes contienen pistas (sobre qué tipos de cáncer responderán o serán resistentes a qué tratamientos) que no suelen encontrarse en los laboratorios de investigación o ensayos clínicos. <span class=\"Italic\">Count Me In</span> permite que los pacientes con cáncer, sin importar donde vivan, compartan su información con investigadores de todas partes, para ayudar a descubrir patrones en los datos.",
+                "Title": "Actuemos juntos para dejar huella en el futuro de la investigación del cáncer.",
+                "Text": "Count Me In es una iniciativa de investigación sin fines de lucro que involucra a los pacientes y les permite hacer avances en la investigación del cáncer al compartir sus muestras, su información clínica y sus puntos de vista.",
                 "LearnMoreAboutUsButton": "Más información sobre nosotros"
+            },
+            "IntroductionSection": {
+                "Title": "La experiencia de cada paciente con cáncer debe tenerse en cuenta.",
+                "Text": "Las historias clínicas, las muestras de tumores y las experiencias personales de los pacientes contienen pistas (sobre qué tipos de cáncer responderán o serán resistentes a qué tratamientos) que no suelen encontrarse en los laboratorios de investigación o ensayos clínicos. <br/><span class=\"Italic\">Count Me In</span> permite que los pacientes con cáncer, sin importar donde vivan, compartan su información con investigadores de todas partes, para ayudar a descubrir patrones en los datos.",
+                "ImageAlt": "Pan Can project Patients"
             },
             "JoinSection": {
                 "Title": "¿Quiénes pueden unirse?",
                 "Text1": "Todas las personas que alguna vez hayan recibido un diagnóstico de cáncer pueden participar si viven en Estados Unidos o Canadá.",
                 "Text2": "Las personas de cualquier edad, sexo, raza, origen étnico y capacidad son bienvenidas.",
-                "ImageAlt": "Mapa con puntos con los participantes de Estados Unidos y Canadá."
+                "ImageAlt": "[ES]Participant"
             },
             "ParticipateSection": {
                 "Title": "Cómo participar",
