--- a/ddp-workspace/projects/ddp-pancan/src/assets/i18n/es.json
+++ b/ddp-workspace/projects/ddp-pancan/src/assets/i18n/es.json
@@ -220,7 +220,7 @@
                                 "<b>Jesse Souweine</b><br/>[ES]Chief Operating Officer, Executive Vice President, Broad Institute"                                ,
                                 "<b>Laurie Glimcher</b><br/>[ES]President and CEO, Dana-Farber Cancer Institute Director, Dana-Farber/Harvard Cancer Center Richard and Susan Smith Professor of Medicine, Harvard Medical School",
                                 "<b>Matt Bettonville</b><br/>[ES]Director, Venture Investing, Health, Emerson Collective",
-                                "<b>Nikhil Wagle</b><br/>[ES]Director"
+                                "<b>Nikhil Wagle</b><br/>[ES]Director, Count Me In<br>Assistant Professor of Medicine, Harvard Medical School / Dana-Farber Cancer Institute<br>Institute Member, Broad Institute"
                             ]
                         }
                     ]
